지도 기능 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AirQuality"
         tools:targetApi="31">
+
+        <meta-data
+            android:name = "com.google.android.geo.API_KEY"
+            android:value="AIzaSyAmjUijRhsDgve0-vht_4-jIU-xCVi0xZE"
+            />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -24,6 +30,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MapActivity"
+            android:exported="false">
+        </activity>
+
     </application>
 
 </manifest>
